# ai-helper-agent

./: .pre-commit-config.yaml  CHANGELOG.md  CONSOLE_SCRIPT_READY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FIXES_SUMMARY.md  INTERNET_ACCESS_FEATURE.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT_READY.md  README.md  UNUSED_FILES_ANALYSIS.md  config.sample.json  deploy_new.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  setup.py  setup_path.ps1
ai_helper_agent/: __init__.py  api_key_manager.py  cli.py  cli_internet_single.py  cli_multi_provider.py  cli_new.py  cli_selector.py  cli_single.py  config.py  conversation_manager.py  core.py  enhanced_cli.py  enhanced_internet_cli.py  internet_access.py  mcp_integration.py  multi_provider_cli.py  multi_provider_startup.py  prompt_enhancer.py  rich_formatting.py  secure_cache.py  security.py  startup.py  streaming.py  system_config.py  templates.py  user_manager.py  utils.py
ai_helper_agent/cli/: __init__.py  cli.py  cli_internet_single.py  cli_selector.py  cli_single.py  enhanced_cli.py  enhanced_internet_cli.py  multi_provider_cli.py  multi_provider_startup.py  startup.py
ai_helper_agent/core/: __init__.py  config.py  core.py
ai_helper_agent/managers/: __init__.py  api_key_manager.py  conversation_manager.py  user_manager.py
ai_helper_agent/providers/: __init__.py
ai_helper_agent/utilities/: __init__.py  api_key_setup.py  simple_logo.py
ai_helper_agent/utils/: __init__.py  api_key_helper.py  browser_integration.py  file_handler.py  file_operations.py  internet_access.py  prompt_enhancer.py  simple_logo.py  streaming.py  utils.py
tests/: test_core.py  test_utils.py
